--- a/.env_example
+++ b/.env_example
@@ -6,7 +6,7 @@ DATABASE_NAME_HOST=db_produtos_favoritos
 DATABASE_NAME_PORT=5432
 
 # Config api product
-URL_API_PRODUCT=http://challenge-api.luizalabs.com/api/product/
+URL_API_PRODUCT=http://challenge-api.empresa.com/api/product/
 
 # Config Cache product
 REDIS_HOST=redis_produtos_favoritos
